--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
   },
   "homepage": "https://github.com/johnmlilly/karaspodcast#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.1-alpha.4",
+    "@11ty/eleventy": "^3.0.0",
     "@11ty/eleventy-img": "^6.0.1",
     "eleventy-plugin-metagen": "^1.8.3",
     "luxon": "^3.5.0"
   },
   "dependencies": {
-    "@11ty/font-awesome": "^1.0.0-beta.1",
     "a11y-slider": "^0.4.22"
   }
 }
