--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
   branch: main 
-media_folder: "assets/episodes"
+media_folder: "src/admin/assets"
 public_folder: "/src/assets/episodes"
 publish_mode: editorial_workflow
 drafts_enabled: true
@@ -21,7 +21,7 @@ collections:
       - { label: "Body", name: "body", widget: "markdown" }
       - { label: "Cover Art", name: "image", widget: "image", choose_url: false, media_library: { max_file_size: 5242880 } } # 5MB max for images
       - { label: "Duration", name: "duration", widget: "string", required: true, hint: "Format: HH:MM:SS or MM:SS (e.g., 00:11:20)" }
-      - { label: "Episode Number", name: "episodeNumber", widget: "string", required: true, hint: "e.g., 'Intro' or a number like '01'" }
+      - { label: "Episode Number", name: "episodeNumber", widget: "number", required: true }
       - { label: "Audio File", name: "audioFile", widget: "file", required: false }
       - { label: "Spotify URL", name: "spotify", widget: "string" }
       - { label: "YouTube URL", name: "youtube", widget: "string" }
@@ -37,6 +37,7 @@ collections:
           name: "tag"
           widget: "select"
           options:
-            - episode
-            - intro
+            - family
             - faith
+            - relationships
+            - grace
