--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -7,6 +7,7 @@ publish_mode: editorial_workflow
 drafts_enabled: true
 site_url: https://karalorynlilly.com/
 display_url: https://karalorynlilly.com/
+logo_url: https://karalorynlilly.com/assets/logo/KLP_Submark_Forest.png
 collections:
   - name: "episode" # Collection name, matching your Eleventy collection tag
     label: "Episodes" # Display name in CMS
