--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -23,7 +23,7 @@ collections:
       - { label: "Body", name: "body", widget: "markdown" }
       - { label: "Cover Art", name: "image", widget: "image", choose_url: false, media_library: { max_file_size: 5242880 } } # 5MB max for images
       - { label: "Duration", name: "duration", widget: "string", required: true, hint: "Format: HH:MM:SS or MM:SS (e.g., 00:11:20)" }
-      - { label: "Episode Number", name: "episodeNumber", widget: "number", required: true }
+      - { label: "Episode Number", name: "episodeNumber", widget: "number", required: true, hint: "Enter  episode number as 01, 02, 03, etc." }
       - { label: "Audio File", name: "audioFile", widget: "file", required: false }
       - { label: "Spotify URL", name: "spotify", widget: "string" }
       - { label: "YouTube URL", name: "youtube", widget: "string" }
