--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -21,7 +21,7 @@ collections:
       - { label: "Date", name: "date", widget: "datetime", required: true, format: "YYYY-MM-DD" }
       - { label: "Intro Text", name: "description", widget: "text", required: true, maxlength: "160", hint: "This is used for meta descriptions and intro text on recent episode cards." }
       - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "Cover Art", name: "image", widget: "image", choose_url: false, media_library: { max_file_size: 5242880 } } # 5MB max for images
+      - { label: "Cover Art", name: "image", widget: "image", choose_url: false, hint: "Max file upload size is 1MB", media_library: { max_file_size: 1048576 } } # 1MB max for images
       - { label: "Duration", name: "duration", widget: "string", required: true, hint: "Format: HH:MM:SS or MM:SS (e.g., 00:11:20)" }
       - { label: "Episode Number", name: "episodeNumber", widget: "number", required: true, hint: "Enter  episode number; will display as 01, 02, 03, etc. on website." }
       - { label: "Audio File", name: "audioFile", widget: "file", required: false }
