--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -50,7 +50,7 @@ collections:
     folder: "src/testimonials"
     create: true
     slug: "{{slug}}" # Generate URL-friendly slugs from names
-    summary: "{{name}} | {{date | date('MMMM DD, YYYY')}}" 
+    summary: "{{name}} | {{date}" 
     fields: # Fields for testimonials
       - { label: "Quote", name: "quote", widget: "text", required: true }
       - { label: "Name", name: "name", widget: "string", required: true }
