--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -45,12 +45,13 @@ collections:
             - relationships
             - grace
         sortable_fields: ["title", "date"]
+        sort: "date:desc"
   - name: "testimonials"
     label: "Testimonials"
     folder: "src/testimonials"
     create: true
     slug: "{{slug}}" # Generate URL-friendly slugs from names
-    summary: "{{name}} | {{date}" 
+    summary: "{{name}} | {{date | date('MMMM DD, YYYY')}}" 
     fields: # Fields for testimonials
       - { label: "Quote", name: "quote", widget: "text", required: true }
       - { label: "Name", name: "name", widget: "string", required: true }
